tests/snapshots/examples_fixtures/type_system__TypeSystem__RealProgramEffects.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/RealProgramEffects.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `TypeSystem.RealProgramEffects` doesn't match file path `examples/type_system/TypeSystem/RealProgramEffects.flx`.

  examples/type_system/TypeSystem/RealProgramEffects.flx:5:1
  |
5 | module TypeSystem.RealProgramEffects {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
